missing background image?

--- a/css/unit4stylesheet.css
+++ b/css/unit4stylesheet.css
@@ -1,6 +1,6 @@
 
 body {
-	background-image:url("../images/copyrightedimage3.jpg");
+	background-image:url("../images/copyrightedimage3.JPG");
 	background-repeat: no-repeat;
 	background-size: 100%;
 }
