--- a/css/unit4stylesheet.css
+++ b/css/unit4stylesheet.css
@@ -4,6 +4,10 @@ body {
 	background-repeat: no-repeat;
 	background-size: 100%;
 }
+#content {
+	margin: 0 0 0 66%;
+	width:755px;
+}
 #wordmark {
 	text-align: center;
 	font-family: 'Old Standard TT', serif;
@@ -32,7 +36,7 @@ hr {
 	font-size: 450%;
 	text-align: center;
 	color: rgb(0, 0, 0,);
-	margin: 0 0 0 0;
+	margin: 0;
 	padding-top: 10px 0 0 0;
 	background-color: rgba(0 ,0 ,0, .0);
 	position: relative;
@@ -40,8 +44,8 @@ hr {
 }
 #top {
 	transform: scaleY(-1) rotate(270deg);
-  -webkit-transform: scaleY(-1) rotate(270deg);
-  -moz-transform: scaleY(-1) rotate(270deg);
+  	-webkit-transform: scaleY(-1) rotate(270deg);
+  	-moz-transform: scaleY(-1) rotate(270deg);
 }
 #stem {
 	margin-top: -40px;
